Added custom field (full name, gender) in registration
Added email confirmation when registers

Customized login UI

--- a/QBO Events Management/Web.config
+++ b/QBO Events Management/Web.config
@@ -16,6 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="Email" value="josephbrian.manalo@benilde.edu.ph"/>
+    <add key="Password" value="bd67fn217gf33"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
