--- a/QBO Events Management/QBO Events Management.csproj
+++ b/QBO Events Management/QBO Events Management.csproj
@@ -203,6 +203,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706080635221_Initial.cs" />
+    <Compile Include="Migrations\201706080635221_Initial.Designer.cs">
+      <DependentUpon>201706080635221_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706080652424_AddTimeMig.cs" />
+    <Compile Include="Migrations\201706080652424_AddTimeMig.Designer.cs">
+      <DependentUpon>201706080652424_AddTimeMig.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EventModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -292,6 +301,14 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706080635221_Initial.resx">
+      <DependentUpon>201706080635221_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706080652424_AddTimeMig.resx">
+      <DependentUpon>201706080652424_AddTimeMig.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
