--- a/QBO Events Management/Web.config
+++ b/QBO Events Management/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-QBO Events Management-20170523105859.mdf&quot;;Initial Catalog=&quot;aspnet-QBO Events Management-20170523105859&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="EventDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Events.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="EventDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Events.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,8 +18,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Email" value="josephbrian.manalo@benilde.edu.ph"/>
-    <add key="Password" value="bd67fn217gf33"/>
+    <add key="Email" value="josephbrian.manalo@benilde.edu.ph" />
+    <add key="Password" value="secret" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -78,6 +78,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
