Added UI to Create, Index Events - Added new Layout

--- a/QBO Events Management/Web.config
+++ b/QBO Events Management/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-QBO Events Management-20170523105859.mdf&quot;;Initial Catalog=&quot;aspnet-QBO Events Management-20170523105859&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="EventDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Events.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="Email" value="josephbrian.manalo@benilde.edu.ph" />
-    <add key="Password" value="secret" />
+    <add key="Password" value="bd67fn217gf33" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
