--- a/QBO Events Management/QBO Events Management.csproj
+++ b/QBO Events Management/QBO Events Management.csproj
@@ -203,6 +203,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706131120115_Status.cs" />
+    <Compile Include="Migrations\201706131120115_Status.Designer.cs">
+      <DependentUpon>201706131120115_Status.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EventModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -283,7 +288,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="bin\" />
-    <Folder Include="Migrations\" />
     <Folder Include="QBO_Events_Management\Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -296,6 +300,11 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706131120115_Status.resx">
+      <DependentUpon>201706131120115_Status.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
