--- a/QBO Events Management/Web.config
+++ b/QBO Events Management/Web.config
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="Email" value="josephbrian.manalo@benilde.edu.ph" />
-    <add key="Password" value="bd67fn217gf33" />
+    <add key="Password" value="sample" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
