--- a/QBO Events Management/Web.config
+++ b/QBO Events Management/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-QBO Events Management-20170523105859.mdf&quot;;Initial Catalog=&quot;aspnet-QBO Events Management-20170523105859&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="EventDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Events.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=tcp:qbo-dbserver.database.windows.net,1433;Initial Catalog=qbo-test-db;Persist Security Info=False;User ID=person@qbo-dbserver.database.windows.net;Password=Testing@123;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,8 +18,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Email" value="josephbrian.manalo@benilde.edu.ph" />
-    <add key="Password" value="sample" />
+    <add key="Email" value="mediaknights7@gmail.com" />
+    <add key="Password" value="providence" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -28,6 +28,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
