--- a/QBO Events Management/QBO Events Management.csproj
+++ b/QBO Events Management/QBO Events Management.csproj
@@ -234,6 +234,10 @@
     <Compile Include="Migrations\201707161958110_dalida.Designer.cs">
       <DependentUpon>201707161958110_dalida.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707180434093_Renche21.cs" />
+    <Compile Include="Migrations\201707180434093_Renche21.Designer.cs">
+      <DependentUpon>201707180434093_Renche21.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EventBrite.cs" />
@@ -347,9 +351,7 @@
     <Content Include="Views\Participants\Create.cshtml" />
     <Content Include="Views\Participants\Delete.cshtml" />
     <Content Include="Views\Participants\Details.cshtml" />
-    <Content Include="Views\Participants\Edit.cshtml" />
-    <Content Include="Views\Participants\Index.cshtml" />
-    <Content Include="Views\HQs\Create2.cshtml" />
+    <Content Include="Views\Participants\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -379,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707161958110_dalida.resx">
       <DependentUpon>201707161958110_dalida.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707180434093_Renche21.resx">
+      <DependentUpon>201707180434093_Renche21.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
